RESOLVED FIXED 242408
getFramebufferAttachmentParameter returns incorrect back buffer color sizes
https://bugs.webkit.org/show_bug.cgi?id=242408
Summary getFramebufferAttachmentParameter returns incorrect back buffer color sizes
Alexey Knyazev
Reported 2022-07-06 12:42:22 PDT
Requesting FRAMEBUFFER_ATTACHMENT_{RED/GREEN/BLUE/ALPHA}_SIZE on the default backbuffer always returns zero because of an unintended side-effect of validateDefaultFramebufferAttachment. This is partly covered by conformance2/state/gl-object-get-calls.html, which is suppressed because of other failures.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-07-13 12:43:15 PDT
EWS
Comment 2 2022-07-27 23:52:08 PDT
Committed 252898@main (a523acecfd06): <https://commits.webkit.org/252898@main> Reviewed commits have been landed. Closing PR #2134 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.