Remove validateDefaultFramebufferAttachment side-effect https://bugs.webkit.org/show_bug.cgi?id=242408

Reviewed by Kenneth Russell.

This function must not modify its argument
because the caller does not expect that.

Fixes 8 failures in
conformance2/state/gl-object-get-calls.html

* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::validateDefaultFramebufferAttachment):

Canonical link: https://commits.webkit.org/252898@main